changes in dashboard and profile component

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-dashboard">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-8 pl-0 pr-0">
+      <div class="col-9 pl-0 pr-0">
         <div class="calender">
           <div class="row text-center table-head">
             <div class="col-md-4">
@@ -56,9 +56,9 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="holiday-div">
-          <div class="clearfix p-3">
+      <div class="col-3">
+        <div class="holiday-div ">
+          <div class="clearfix p-3 ">
             <div class="holiday-heading float-left">
               Employees on Leave
             </div>
@@ -68,53 +68,51 @@
           </div>
           <hr>
 
-          <div class="absent">
+          <div class="absent holidayscroll">
             <!-- on holiday list -->
             <div class="employee">
-              <div class="employee-on-leave bodrer">
-                <img src="../../../assets/images/GIRL.jpg" alt="user">
-                <div class="list1">
-                  <h6>Isabela Phelaps</h6>
-                  <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
-                  <div class="down-row d-flex">
-                    <div class="row">
-                      <div class="col-6">
-                          <div class="cause">
-                              <span>6 Day</span>
-                              <span class="dot sick-dot"></span>
-                              <span class="fix-width">Sick</span>
-                            </div>
+                <div class="employee-on-leave bodrer">
+                  <img src="../../../assets/images/GIRL.jpg" alt="user">
+                  <div class="list1">
+                    <h6>Isabela Phelaps</h6>
+                    <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
+                    <div class="status">
+                      <div class="cause">
+                        <span>2 Day</span>
+                        <span class="dot sick-dot"></span>
+                        <span>Sick</span>
                       </div>
-                      <div class="col-6">
-                          <div class="accept">
-                              <div class="box box-reject">Reject</div>
-                              <div class="box box-accept">Accept</div>
-                            </div>
-                          </div>
-                      </div>
+                     
                     </div>
-                    
-                    
+                    <div class="accept">
+                        <button mat-flat-button color="warn" class="rejectbutton">Reject</button>
+                        <button mat-flat-button class="accepttbutton">Accept</button>
+                      <!-- <div class="box box-reject">Reject</div>
+                      <div class="box box-accept">Accept</div> -->
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
                         <!-- on holiday list -->
-                        <div class="employee">
+                     <div class="employee">
                             <div class="employee-on-leave bodrer">
                               <img src="../../../assets/images/user-1.jpg" alt="user">
                               <div class="list1">
                                 <h6>Devid Corn</h6>
                                 <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
-                                <div class="down-row d-flex">
+                                <div class="status">
                                   <div class="cause">
                                     <span>2 Day</span>
                                     <span class="dot personal-dot"></span>
                                     <span>Personal</span>
                                   </div>
-                                  <div class="accept">
-                                    <div class="box box-reject">Reject</div>
-                                    <div class="box box-accept">Accept</div>
-                                  </div>
+                                 
+                                </div>
+                                <div class="accept">
+                                    <button mat-flat-button color="warn" class="rejectbutton">Reject</button>
+                                    <button mat-flat-button class="accepttbutton">Accept</button>
+                                  <!-- <div class="box box-reject">Reject</div>
+                                  <div class="box box-accept">Accept</div> -->
                                 </div>
                               </div>
                             </div>
@@ -126,16 +124,19 @@
                   <div class="list1">
                     <h6>Devid Corn</h6>
                     <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
-                    <div class="down-row d-flex">
+                    <div class="status">
                       <div class="cause">
                         <span>3 Day</span>
                         <span class="dot personal-dot"></span>
                         <span>Personal</span>
                       </div>
-                      <div class="accept">
-                        <div class="box box-reject">Reject</div>
-                        <div class="box box-accept">Accept</div>
-                      </div>
+                      
+                    </div>
+                    <div class="accept">
+                        <button mat-flat-button color="warn" class="rejectbutton">Reject</button>
+                        <button mat-flat-button class="accepttbutton">Accept</button>
+                      <!-- <div class="box box-reject">Reject</div>
+                      <div class="box box-accept">Accept</div> -->
                     </div>
                   </div>
                 </div>
@@ -147,16 +148,19 @@
                   <div class="list1">
                     <h6>Trevor Hansen</h6>
                     <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
-                    <div class="down-row d-flex">
+                    <div class="status">
                       <div class="cause">
                         <span>1 Day</span>
                         <span class="dot earned-dot"></span>
                         <span>Earned</span>
                       </div>
-                      <div class="accept">
-                        <div class="box box-reject">Reject</div>
-                        <div class="box box-accept">Accept</div>
-                      </div>
+                     
+                    </div>
+                    <div class="accept">
+                        <button mat-flat-button color="warn" class="rejectbutton">Reject</button>
+                        <button mat-flat-button class="accepttbutton">Accept</button>
+                      <!-- <div class="box box-reject">Reject</div>
+                      <div class="box box-accept">Accept</div> -->
                     </div>
                   </div>
                 </div>
@@ -168,16 +172,19 @@
                   <div class="list1">
                     <h6>Isabela Phelaps</h6>
                     <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
-                    <div class="down-row d-flex">
+                    <div class="status">
                       <div class="cause">
                         <span>2 Day</span>
                         <span class="dot sick-dot"></span>
                         <span>Sick</span>
                       </div>
-                      <div class="accept">
-                        <div class="box box-reject">Reject</div>
-                        <div class="box box-accept">Accept</div>
-                      </div>
+                     
+                    </div>
+                    <div class="accept">
+                        <button mat-flat-button color="warn" class="rejectbutton">Reject</button>
+                        <button mat-flat-button class="accepttbutton">Accept</button>
+                      <!-- <div class="box box-reject">Reject</div>
+                      <div class="box box-accept">Accept</div> -->
                     </div>
                   </div>
                 </div>
@@ -262,7 +269,7 @@
       </div>
 
       <div class="col-3">
-        <div class="holiday-div">
+        <div class="holiday-div holiday">
           <div class="clearfix p-3">
             <div class="holiday-heading float-left">
               Today Absent
