--- a/src/app/components/holidays/holidays.component.html
+++ b/src/app/components/holidays/holidays.component.html
@@ -30,8 +30,23 @@
     </mat-select>
   </mat-form-field>
     </div>
-    
+    <div class="used">
+      <p class="usedleave">Used leaves</p>
+        <mat-progress-bar mode="determinate" value="40"  matTooltip="5 out of 12"
+        aria-label="Button that displays a tooltip when focused or hovered over">
+           
+        </mat-progress-bar>
+
     </div>
+    <!-- <div class="used">
+        <p class="usedleave">left leaves</p>
+          <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
+  
+      </div> -->
+      
+      
+        
+      </div>
     <div class="outerbox">
       
       </div>
