--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -20,6 +20,7 @@
                         <div class="editbutton">
                            
                             <button mat-flat-button class="edit" (click)="openDialog()">Edit</button>
+                            <!-- <button mat-flat-button color="primary" (click)="openDialog()">Edit</button> -->
                         </div>
             
                     </div>
