--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -135,6 +135,7 @@
         .icons-div {
           text-align: right;
           display: inline-flex;
+          margin-right: -11px;
         }
         i {
           color: #2c3e50;
