--- a/src/app/shared/help-popup/help-popup.component.html
+++ b/src/app/shared/help-popup/help-popup.component.html
@@ -60,7 +60,9 @@
 </div>
 
 <div class="buttons">
-    <button class="save">Save</button>
-    <button class="cancel" (click)="onNoClick()">Cancel</button>
+        <button mat-flat-button color="primary" class="save">Save</button>
+        <button mat-flat-button color="primary" class="cancel" (click)="onNoClick()">Cancel</button>
+    <!-- <button class="save">Save</button>
+    <button class="cancel" (click)="onNoClick()">Cancel</button> -->
 
 </div>
