--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -8,6 +8,7 @@
     position: relative;
     margin-bottom: -120px;
     border-radius: 6px;
+    margin-top: 60px;
    
 
     h5{
@@ -72,9 +73,7 @@
     font-weight: 500;
 }
 .edit{
-    padding:7px 25px;
     background-color: #70aade;
-    border: none;
     color: white;
 }
 .subhead{
