some scss changes in holiday and profile component

--- a/src/app/components/holidays/holidays.component.scss
+++ b/src/app/components/holidays/holidays.component.scss
@@ -224,8 +224,8 @@ table th, td {
       text-decoration: none;
     }
   }
-.header{
-  .button{
-    margin-right: 14px;
-  }
-}
+// .header{
+//   .button{
+//     margin-right: 14px;
+//   }
+// }
