--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,7 +8,7 @@
                     </div>
                 </div>
 
-                <p><a href="#" class="upload">Change your profile picture</a></p>
+                <p style="text-align: center;"><a href="#" class="upload">Change your profile picture</a></p>
                 <h5>Samuel Smith</h5>
             
             </section>
